--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,5 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:+'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0-M4'
 }
