--- a/src/main/resources/db/db.properties
+++ b/src/main/resources/db/db.properties
@@ -2,3 +2,5 @@ driver=org.postgresql.Driver
 url=jdbc:postgresql://localhost:5432/postgres
 user=admin
 password=admin
+minPoolSize=1
+maxPoolSize=5
