--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-core:+',
             'io.vavr:vavr:+',
             'org.postgresql:postgresql:+',
-            'c3p0:c3p0:+'
+            'c3p0:c3p0:+',
+            'edu.stanford.nlp:stanford-corenlp:+'
 
     compileOnly 'org.projectlombok:lombok:+'
 
